# scriptorium

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml  release.yml.todo
public/: .gitignore
src/: App.tsx  Document.css  Document.tsx  Editor.tsx  Nav.css  Nav.tsx  Settings.css  Settings.tsx  colors.ts  consts.ts  main.tsx  markdown.worker.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  migrations.rs  mysql.rs  postgres.rs  types.rs
src/Document/: Editor.css  Editor.tsx
src/Nav/: Books.tsx  Documents.css  Documents.tsx
