[package]
name = "scriptorium"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "scriptorium_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8.2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# tauri-plugin-sql = { version = "2", features = ["mysql", "postgres", "sqlite"] }
tauri-plugin-sql = { git = "https://github.com/athanclark/plugins-workspace.git", package="tauri-plugin-sql", branch = "public-sql-migrationlist", features = ["mysql", "postgres", "sqlite"] }
lazy_static = "1.5.0"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "runtime-tokio-rustls", "time", "tls-rustls-ring-native-roots"] }
log = "0.4.27"
env_logger = "0.11.8"
chrono = "0.4.41"
pulldown-cmark = "0.13.0"
asciidocr = { git = "https://github.com/athanclark/asciidocr.git", rev = "162a0ec45b67ec361ddcfc7c86234f49943070d7" }

